--- a/index.html
+++ b/index.html
@@ -106,11 +106,28 @@
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/o7asdasdQ4?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
           </div> -->
-          <div class="col-lg-5 my-auto">
+
+
+        <!--   <div class="col-lg-5" style=" margin-top: 8rem;">
             <div class="videowrapper">
-            <iframe width="100%" src="https://www.youtube-nocookie.com/embed/hLX7yu22420?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <div class="film-background">
+                <video width="242"controls class="appvideo">
+                  <source src="./img/screen.mp4" type="video/mp4">
+                </video>
+              </div>
+              </div>
+          </div>-->
+
+          <div class="col-lg-5" style=" margin-top: 8rem;">
+            <div class="videowrapper">
+              <img src="./img/mobile.png" class="film-background2">
+              <video width="242"  autoplay="autoplay" class="appvideo">
+                <source src="./img/screen.mp4" type="video/mp4">
+              </video>
             </div>
           </div>
+
+
           <!-- include scrolldown button here -->
             <div id="scrolldownbutton">
               <a class="nav-link js-scroll-trigger" href="#getstartednow">
@@ -122,8 +139,8 @@
       </div>
     </header>
 
-    <div id="schebb">
-    </div>
+    <!-- <div id="schebb">
+    </div> -->
 
     <section class="examples" id="examples" style="padding-top: 0px;">
       <div class="container">
@@ -131,9 +148,19 @@
           <h2 style="margin-bottom: 40px;">App Features</h2>
           <div class="row">
             <div class="col-sm-10">
+              <h3>App Feature</h3>
               <p style="margin-bottom: 20px">
                 Lorem Ipsum.
               </p>
+              <h3>App Feature</h3>
+              <p style="text-align: justify;">
+                Lorem Ipsum.
+              </p>
+              <h3>App Feature</h3>
+              <p style="margin-bottom: 20px">
+                Lorem Ipsum.
+              </p>
+              <h3>App Feature</h3>
               <p style="text-align: justify;">
                 Lorem Ipsum.
               </p>
@@ -178,7 +205,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
     <script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    <script src='js/oneclick.js'></script>
 
   </body>
 
