--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <div class="col-lg-5" style=" margin-top: 8rem;">
             <div class="videowrapper">
               <img src="./img/mobile.png" class="film-background2">
-              <video width="242"  autoplay="autoplay" class="appvideo">
+              <video width="242" autoplay loop class="appvideo">
                 <source src="./img/screen.mp4" type="video/mp4">
               </video>
             </div>
