adding testing links

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
               <br>
               <br>
               <br>
-              <a href="https://github.com/trustlines-network/feedback" style="text-decoration: none;">
+              <a href="https://play.google.com/apps/testing/network.trustlines.mobileapp" style="text-decoration: none; margin-right: 1em;">
                 <img src="./img/google_play_button.svg" height="30">
               </a>
-              <a href="https://github.com/trustlines-network/feedback" style="text-decoration: none;">
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScnhZdowNiCTun3hl8d6NpbeZwzoGTOIISBjToh7ylGSiN7dw/viewform" style="text-decoration: none;">
                 <img src="./img/app_store_button.svg" height="30">
               </a>
             </div>
