phone shifted to right, inserted dummy text

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
           <ul class="navbar-nav ml-auto">
             <!-- <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#features">How does it work?</a>
-            </li> -->
+            </li>
             <li class="nav-item" id="examplesnav">
               <a class="nav-link js-scroll-trigger" href="#examples">Features</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="https://trustlines.network/dev.html">Documentation</a>
             </li>
@@ -78,7 +78,7 @@
     <header class="masthead">
       <div class="container h-100">
         <div class="row h-100">
-          <div class="col-lg-7 my-auto">
+          <div class="col-lg-8 my-auto">
             <div class="header-content">
               <h3 style="color: black; margin-bottom:20px; text-transform: uppercase;">
                 Join the Trustlines App Testing
@@ -87,7 +87,7 @@
                 Trustlines enables you to pay anyone in a global network of trusted relationships, without the need for ID or bank account.
               </p>
               <p style="margin-bottom:20px">
-                Download our app and join the first currency networks.
+                Get early access & join the first currency networks:
               </p>
               <a href="https://play.google.com/apps/testing/network.trustlines.mobileapp" style="text-decoration: none; margin-right: 1em;">
                 <img src="./img/google_play_button.svg" height="30">
@@ -114,7 +114,7 @@
               </div>
           </div>-->
 
-          <div class="col-lg-5" style=" margin-top: 8rem;">
+          <div class="col-lg-4" style=" margin-top: 8rem;">
             <div class="videowrapper">
               <img src="./img/mobile.png" class="film-background2">
               <video width="242" autoplay loop class="appvideo">
@@ -138,27 +138,27 @@
     <!-- <div id="schebb">
     </div> -->
 
-    <section class="examples" id="examples" style="padding-top: 0px;">
+    <section class="examples" id="examples">
       <div class="container">
         <div class="section-heading" style="margin-bottom: 40px;">
-          <h2 style="margin-bottom: 40px;">App Features</h2>
+          <h2 style="margin-bottom: 40px;">Share Value in your Communities</h2>
           <div class="row">
             <div class="col-sm-10">
-              <h3>App Feature</h3>
+              <h3>Global Mobile Payments</h3>
               <p style="margin-bottom: 20px">
-                Lorem Ipsum.
+                Pay and lend Trustline currency without ID, bank account. You become both sides. The bank and the bank customer. Pay and lend via your social graph.
               </p>
-              <h3>App Feature</h3>
+              <h3>Local Community Currencies</h3>
               <p style="text-align: justify;">
-                Lorem Ipsum.
+                Change the face of your local economy with Trustlines. Issue local currency and boost your community’s economic activity. Be a stakeholder in a new model of shared prosperity.
               </p>
-              <h3>App Feature</h3>
+              <h3>Cryptocurrency Microlending</h3>
               <p style="margin-bottom: 20px">
-                Lorem Ipsum.
+                Lend crypto to your friends, so they can use DApps without the usual hazzle with exchanges.
               </p>
-              <h3>App Feature</h3>
+              <h3>Decentralized and Open Source</h3>
               <p style="text-align: justify;">
-                Lorem Ipsum.
+                Beercoin is open source, permissionless and free to use. Any developer can change the code.
               </p>
             </div>
           </div>
