--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@
 
     <section class="examples" id="examples">
       <div class="container">
+        <div class="row">
+          <div class="col-sm-7">
         <div class="section-heading" style="margin-bottom: 40px;">
           <h2 style="margin-bottom: 40px;">Share Value in your Communities</h2>
           <div class="row">
-            <div class="col-sm-10">
+            <div class="col-sm-12">
               <h3>Global Mobile Payments</h3>
               <p style="margin-bottom: 20px">
                 Pay and lend Trustline currency without ID, bank account. You become both sides. The bank and the bank customer. Pay and lend via your social graph.
@@ -163,6 +165,8 @@
             </div>
           </div>
           </div>
+        </div>
+        </div>
         </div>
     </section>
 
