add google commuinity

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <p style="margin-bottom:20px">
                 Get early access & join the first currency networks:
               </p>
-              <a href="https://play.google.com/apps/testing/network.trustlines.mobileapp" style="text-decoration: none; margin-right: 1em;">
+              <a href="https://plus.google.com/communities/110092662247828550761" style="text-decoration: none; margin-right: 1em;">
                 <img src="./img/google_play_button.svg" height="30">
               </a>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLScnhZdowNiCTun3hl8d6NpbeZwzoGTOIISBjToh7ylGSiN7dw/viewform" style="text-decoration: none;">
