--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="col-lg-4" style=" margin-top: 8rem;">
             <div class="videowrapper">
               <img src="./img/mobile.png" class="film-background2">
-              <video width="242" autoplay loop class="appvideo">
+              <video width="242" playsinline autoplay muted loop class="appvideo">
                 <source src="./img/screen.mp4" type="video/mp4">
               </video>
             </div>
