text changes and margins

--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
     <!-- Custom fonts for this template -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
-    <!--
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    -->
 
     <!-- Custom styles for this template
     <link href="css/new-age.min.css" rel="stylesheet"> -->
@@ -36,7 +31,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
           <div class="inline-block" style="display: inline-block;">
             <div class="table-cell" style="padding-right: 1rem; display: table-cell;">
-          <img src="./img/trustlines.png" height="30">
+          <img src="./img/trustlines.png" height="30" style=" padding-bottom: 4px; ">
           </div>
           <div class="table-cell" style="display: table-cell; color: #000;">trustlines payment app</div>
           </div>
@@ -47,12 +42,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <!-- <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#features">How does it work?</a>
-            </li>
-            <li class="nav-item" id="examplesnav">
-              <a class="nav-link js-scroll-trigger" href="#examples">Features</a>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="https://trustlines.network/dev.html">Documentation</a>
             </li>
@@ -77,38 +66,29 @@
           <div class="col-lg-8 my-auto">
             <div class="header-content">
               <h3 style="color: black; margin-bottom:20px; text-transform: uppercase;">
-                Join the Trustlines App Testing
+                the payment layer for your social network
               </h3>
               <p style="margin-bottom:20px">
-                Trustlines enables you to pay anyone in a global network of trusted relationships, without the need for ID or bank account.
+                Trustlines enables you to pay anyone without having to rely on banks or crypto exchanges.
               </p>
               <p style="margin-bottom:20px">
-                Get early access & join the first currency networks:
+                Get early access:
               </p>
-              <a href="https://plus.google.com/communities/110092662247828550761" style="text-decoration: none; margin-right: 1em;">
-                <img src="./img/google_play_button.svg" height="30">
-              </a>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLScnhZdowNiCTun3hl8d6NpbeZwzoGTOIISBjToh7ylGSiN7dw/viewform" style="text-decoration: none;">
-                <img src="./img/app_store_button.svg" height="30">
-              </a>
+              <ol>
+                <li>Download the app. <br>
+                  <a href="https://plus.google.com/communities/110092662247828550761" style="text-decoration: none; margin-right: 1em;">
+                    <img src="./img/google_play_button.svg" height="36">
+                  </a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLScnhZdowNiCTun3hl8d6NpbeZwzoGTOIISBjToh7ylGSiN7dw/viewform" style="text-decoration: none;">
+                    <img src="./img/app_store_button.svg" height="36">
+                  </a>
+                <li>Signup without ID or bank account.
+                <li>Join a network by connecting to a friend.
+              </ol>
+
+
             </div>
           </div>
-          <!--<div class="col-lg-5 my-auto">
-            <div class="videowrapper">
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/o7asdasdQ4?rel=0&amp;controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
-          </div> -->
-
-
-        <!--   <div class="col-lg-5" style=" margin-top: 8rem;">
-            <div class="videowrapper">
-              <div class="film-background">
-                <video width="242"controls class="appvideo">
-                  <source src="./img/screen.mp4" type="video/mp4">
-                </video>
-              </div>
-              </div>
-          </div>-->
 
           <div class="col-lg-4" style=" margin-top: 8rem;">
             <div class="videowrapper">
@@ -122,12 +102,11 @@
 
           <!-- include scrolldown button here -->
             <div id="scrolldownbutton">
-              <a class="nav-link js-scroll-trigger" href="#getstartednow">
+              <a class="nav-link js-scroll-trigger" href="#examples">
                 <span style="position: absolute; top: 80%; left: 50%; width: 24px; height: 24px; margin-left: -12px; border-left: 1px solid #000; border-bottom: 1px solid #000; -webkit-transform: rotateZ(-45deg); transform: rotateZ(-45deg); -webkit-animation: sdb06 1.5s infinite; animation: sdb06 1.5s infinite; box-sizing: border-box;">
                 </span></a>
             </div>
         </div>
-
       </div>
     </header>
 
@@ -138,25 +117,26 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-7">
-        <div class="section-heading" style="margin-bottom: 40px;">
-          <h2 style="margin-bottom: 40px;">Share Value in your Communities</h2>
+        <div class="section-heading" >
+          <h2 >Fair access to money</h2>
+          <p>Trustlines lets you create share and exchange value.</p>
           <div class="row">
             <div class="col-sm-12">
-              <h3>Global Mobile Payments</h3>
-              <p style="margin-bottom: 20px">
-                Pay and lend Trustline currency without ID, bank account. You become both sides. The bank and the bank customer. Pay and lend via your social graph.
-              </p>
-              <h3>Local Community Currencies</h3>
+              <h3 class="exampleheader">Strengthen your Local Community</h3>
               <p style="text-align: justify;">
-                Change the face of your local economy with Trustlines. Issue local currency and boost your community’s economic activity. Be a stakeholder in a new model of shared prosperity.
+                Issue local currency and boost your community’s economic activity. Be a stakeholder in a new model of shared prosperity.
               </p>
-              <h3>Cryptocurrency Microlending</h3>
+              <h3 class="exampleheader">Give Instant Access to Cryptocurrency</h3>
+              <p style="text-align: justify;">
+                Trustlines lets you lend cryptocurrencies to anyone in need - your nocoiner friend, or a persecuted freedom fighter. Build your network and spread freedom!
+              </p>
+              <!--<h3 class="exampleheader">Cryptocurrency Microlending</h3>
               <p style="margin-bottom: 20px">
                 Lend crypto to your friends, so they can use DApps without the usual hazzle with exchanges.
-              </p>
-              <h3>Decentralized and Open Source</h3>
+              </p> -->
+              <h3 class="exampleheader">Decentralized and Open Source Software</h3>
               <p style="text-align: justify;">
-                Beercoin is open source, permissionless and free to use. Any developer can change the code.
+                Beercoin is open source, permissionless and free to use. We invite any developer to join our mission to bring free access to money and build on top of the trustlines protocol.
               </p>
             </div>
           </div>
