text changes and margins

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <a class="nav-link" target="_blank" href="https://trustlines.network">Trustlines Protocol</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" target="_blank" href="https://trustlines.network/dev.html">Documentation</a>
             </li>
             <li class="nav-item">
@@ -75,15 +78,17 @@
                 Get early access:
               </p>
               <ol>
-                <li>Download the app. <br>
+                <li>Download the app
+                  <div class="row" style="padding: 10px;">
                   <a href="https://plus.google.com/communities/110092662247828550761" style="text-decoration: none; margin-right: 1em;">
                     <img src="./img/google_play_button.svg" height="36">
                   </a>
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLScnhZdowNiCTun3hl8d6NpbeZwzoGTOIISBjToh7ylGSiN7dw/viewform" style="text-decoration: none;">
                     <img src="./img/app_store_button.svg" height="36">
                   </a>
-                <li>Signup without ID or bank account.
-                <li>Join a network by connecting to a friend.
+                  </div>
+                <li>Signup without ID or bank account
+                <li>Join a network by connecting to a friend
               </ol>
 
 
