--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
           <div class="col-lg-4" style=" margin-top: 8rem;">
             <div class="videowrapper">
-              <img src="./img/mobile.png" class="film-background2">
+              <img src="./img/mobile.svg" class="film-background2">
               <video width="242" playsinline autoplay muted loop class="appvideo">
                 <source src="./img/screen.mp4" type="video/mp4">
               </video>
