--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="videowrapper">
               <img src="./img/mobile.svg" class="film-background2">
               <video width="242" playsinline autoplay muted loop class="appvideo">
-                <source src="./img/screen.mp4" type="video/mp4">
+                <source src="./img/appvideo.mp4" type="video/mp4">
               </video>
             </div>
           </div>
