--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         <div class="row h-100">
           <div class="col-lg-8 my-auto">
             <div class="header-content">
-              <h3 style="color: black; margin-bottom:20px; text-transform: uppercase;">
+              <h2 style="color: black; margin-bottom:20px; text-transform: uppercase;">
                 the payment layer for your social network
-              </h3>
+              </h2>
               <p style="margin-bottom:20px">
-                Trustlines enables you to pay anyone without having to rely on banks or crypto exchanges.
+                Pay anyone without having to rely on banks or crypto exchanges. Trustlines is not cash nor crypto - It redefines money as mutual credit between you and your friend.
               </p>
               <p style="margin-bottom:20px">
                 Get early access:
